# mdbp1

./: app.py  pyproject.toml  pyrightconfig.json
models/: database.py
routes/: awards.py  genres.py  movies.py  people.py  studios.py
