[tool.poetry]
name = "mdbp1"
version = "0.1.0"
description = ""
authors = ["codelotusr <smaliukasdeividas@gmail.com> justingal <dzukijosberniukas@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
blinker = "1.9.0"
click = "8.1.8"
dnspython = "2.7.0"
flask = "3.1.0"
flask-cors = "5.0.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.5"
markupsafe = "3.0.2"
pymongo = "4.11"
werkzeug = "3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
